弹出层UI响应式兼容

--- a/html/index/index.html
+++ b/html/index/index.html
@@ -12,24 +12,24 @@
     <meta name="renderer" content="webkit">
     <!-- No Baidu Siteapp-->
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="icon" type="image/png" href="./src/images/ystx_logo.png">
+    <link rel="icon" type="image/png" href="../../src/images/index/ystx_logo.png">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="./src/images/ystx_logo.png">
+    <link rel="icon" sizes="192x192" href="../../src/images/index/ystx_logo.png">
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Amaze UI" />
-    <link rel="apple-touch-icon-precomposed" href="./src/images/ystx_logo.png">
+    <link rel="apple-touch-icon-precomposed" href="../../src/images/index/ystx_logo.png">
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="assets/i/app-icon72x72@2x.png">
     <meta name="msapplication-TileColor" content="#0e90d2">
     <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.css">
     <!-- 依赖 -->
     <!-- 业务逻辑 -->
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/base.css">
-    <link rel="stylesheet" href="./src/css/index.css">
+    <link rel="stylesheet" href="../../src/css/common/reset.css">
+    <link rel="stylesheet" href="../../src/css/common/base.css">
+    <link rel="stylesheet" href="../../src/css/index/index.css">
 </head>
 
 <body>
@@ -88,12 +88,12 @@
                                     </button>
                                 </div>
                                 <div class="am-list-thumb am-u-sm-12">
-                                    <a href="./detail.html" class="poster">
+                                    <a href="../detail/detail.html" class="poster">
                                         <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="我很囧，你保重....晒晒旅行中的那些囧！" />
                                     </a>
                                 </div>
                                 <div class=" am-list-main">
-                                    <h3 class="am-list-item-hd"><a href="./detail.html" class="">我很囧，你保重....晒晒旅行中的那些囧！</a></h3>
+                                    <h3 class="am-list-item-hd"><a href="../detail/detail.html" class="">我很囧，你保重....晒晒旅行中的那些囧！</a></h3>
                                     <div class="am-list-item-text">囧人囧事囧照，人在囧途，越囧越萌。标记《带你出发，陪我回家》http://book.douban.com/subject/25711202/为“想读”“在读”或“读过”，有机会获得此书本活动进行3个月，每月送出三本书。会有不定期bonus！</div>
                                 </div>
                             </li>
@@ -109,12 +109,12 @@
                                     </button>
                                 </div>
                                 <div class="am-list-thumb am-u-sm-12">
-                                    <a href="./detail.html" class="poster">
+                                    <a href="../detail/detail.html" class="poster">
                                         <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="我很囧，你保重....晒晒旅行中的那些囧！" />
                                     </a>
                                 </div>
                                 <div class=" am-list-main">
-                                    <h3 class="am-list-item-hd"><a href="./detail.html" class="">我很囧，你保重....晒晒旅行中的那些囧！</a></h3>
+                                    <h3 class="am-list-item-hd"><a href="../detail/detail.html" class="">我很囧，你保重....晒晒旅行中的那些囧！</a></h3>
                                     <div class="am-list-item-text">囧人囧事囧照，人在囧途，越囧越萌。标记《带你出发，陪我回家》http://book.douban.com/subject/25711202/为“想读”“在读”或“读过”，有机会获得此书本活动进行3个月，每月送出三本书。会有不定期bonus！</div>
                                 </div>
                             </li>
@@ -138,11 +138,11 @@
                     <div class="am-list-news-bd">
                         <ul class="am-list">
                             <li class="am-g am-list-item-desced">
-                                <a href="./detail.html" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
+                                <a href="../detail/detail.html" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
                                 <div class="am-list-item-text">囧人囧事囧照，人在囧途，越囧越萌。标记《带你出发，陪我回家》http://book.douban.com/subject/25711202/为“想读”“在读”或“读过”，有机会获得此书本活动进行3个月，每月送出三本书。会有不定期bonus！</div>
                             </li>
                             <li class="am-g am-list-item-desced">
-                                <a href="./detail.html" class="am-list-item-hd ">我最喜欢的一张画</a>
+                                <a href="../detail/detail.html" class="am-list-item-hd ">我最喜欢的一张画</a>
                                 <div class="am-list-item-text">你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片美我最喜欢的画群296795413进群发画，少说多发图，</div>
                             </li>
                         </ul>
@@ -160,11 +160,11 @@
                     <div class="am-list-news-bd">
                         <ul class="am-list">
                             <li class="am-g am-list-item-desced">
-                                <a href="./detail.html" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
+                                <a href="../detail/detail.html" class="am-list-item-hd ">我很囧，你保重....晒晒旅行中的那些囧！</a>
                                 <div class="am-list-item-text">囧人囧事囧照，人在囧途，越囧越萌。标记《带你出发，陪我回家》http://book.douban.com/subject/25711202/为“想读”“在读”或“读过”，有机会获得此书本活动进行3个月，每月送出三本书。会有不定期bonus！</div>
                             </li>
                             <li class="am-g am-list-item-desced">
-                                <a href="./detail.html" class="am-list-item-hd ">我最喜欢的一张画</a>
+                                <a href="../detail/detail.html" class="am-list-item-hd ">我最喜欢的一张画</a>
                                 <div class="am-list-item-text">你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片美我最喜欢的画群296795413进群发画，少说多发图，</div>
                             </li>
                         </ul>
@@ -179,9 +179,8 @@
             </a>
         </div>
     </div>
-
     <!--[if (gte IE 9)|!(IE)]><!-->
-    <script src="./dep/jquery.min.js"></script>
+    <script src="../../dep/jquery.min.js"></script>
     <!--<![endif]-->
     <!--[if lte IE 8 ]>
     <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
@@ -190,10 +189,10 @@
     <![endif]-->
     <script src="http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.min.js"></script>
     <!-- 依赖 -->
-    <script src="./dep/layer/mobile/layer.js"></script>
+    <script src="../../dep/layer/mobile/layer.js"></script>
     <!-- 业务逻辑 -->
-    <script src="./src/js/common/modules.js"></script>
-    <script src="./src/js/index.js"></script>
+    <script src="../../src/js/common/loginRegisterView.js"></script>
+    <script src="../../src/js/index/index.js"></script>
 </body>
 
 </html>
