--- a/html/common/footer.html
+++ b/html/common/footer.html
@@ -12,15 +12,15 @@
     <meta name="renderer" content="webkit">
     <!-- No Baidu Siteapp-->
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="icon" type="image/png" href="./src/images/ystx_logo.png">
+    <link rel="icon" type="image/png" href="../../src/images/index/ystx_logo.png">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="./src/images/ystx_logo.png">
+    <link rel="icon" sizes="192x192" href="../../src/images/index/ystx_logo.png">
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Amaze UI" />
-    <link rel="apple-touch-icon-precomposed" href="./src/images/ystx_logo.png">
+    <link rel="apple-touch-icon-precomposed" href="../../src/images/index/ystx_logo.png">
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="assets/i/app-icon72x72@2x.png">
     <meta name="msapplication-TileColor" content="#0e90d2">
