--- a/html/detail/detail.html
+++ b/html/detail/detail.html
@@ -12,24 +12,24 @@
     <meta name="renderer" content="webkit">
     <!-- No Baidu Siteapp-->
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="icon" type="image/png" href="./src/images/ystx_logo.png">
+    <link rel="icon" type="image/png" href="../../src/images/index/ystx_logo.png">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="./src/images/ystx_logo.png">
+    <link rel="icon" sizes="192x192" href="../../src/images/index/ystx_logo.png">
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Amaze UI" />
-    <link rel="apple-touch-icon-precomposed" href="./src/images/ystx_logo.png">
+    <link rel="apple-touch-icon-precomposed" href="../../src/images/index/ystx_logo.png">
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="assets/i/app-icon72x72@2x.png">
     <meta name="msapplication-TileColor" content="#0e90d2">
     <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.css">
     <!-- 依赖 -->
     <!-- 业务逻辑 -->
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/base.css">
-    <link rel="stylesheet" href="./src/css/detail.css">
+    <link rel="stylesheet" href="../../src/css/common/reset.css">
+    <link rel="stylesheet" href="../../src/css/common/base.css">
+    <link rel="stylesheet" href="../../src/css/detail/detail.css">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
     </div>
 
     <!--[if (gte IE 9)|!(IE)]><!-->
-    <script src="./dep/jquery.min.js"></script>
+    <script src="../../dep/jquery.min.js"></script>
     <!--<![endif]-->
     <!--[if lte IE 8 ]>
     <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
@@ -96,10 +96,10 @@
     <![endif]-->
     <script src="http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.min.js"></script>
     <!-- 依赖 -->
-    <script src="./dep/layer/mobile/layer.js"></script>
+    <script src="../../dep/layer/mobile/layer.js"></script>
     <!-- 业务逻辑 -->
-    <script src="./src/js/common/modules.js"></script>
-    <script src="./src/js/detail.js"></script>
+    <script src="../../src/js/common/loginRegisterView.js"></script>
+    <script src="../../src/js/detail/detail.js"></script>
 </body>
 
 </html>
