首页点赞逻辑修改、详情页UI修改

--- a/html/detail/detail.html
+++ b/html/detail/detail.html
@@ -66,11 +66,11 @@
             </div>
         </header>
         <div class="content">
-            <h2>毕业一年，我学到的五种高效学习方法</h2>
+            <h2 class="am-text-xl">毕业一年，我学到的五种高效学习方法</h2>
             <div class="author">
                 <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
                 <div class="am-margin-left-xs">
-                    <span class="name am-text-sm">赵雷</span>
+                    <span class="name am-text-sm"><b>赵雷</b></span>
                     <div>
                         <span class="time am-text-xs">2017.2.5</span>
                         <span class="am-text-xs am-margin-left-xs">阅读100</span>
