--- a/html/index/index.html
+++ b/html/index/index.html
@@ -82,8 +82,8 @@
                                         <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" class="am-circle am-margin-right-sm headImg" alt="头像">
                                         <span class="am-text-xs uname am-text-middle">朱自清</span>
                                     </a>
-                                    <button class="am-fr like am-vertical-align-middle">
-                                        <span class="am-icon-thumbs-o-up am-text-sm icon"></span>
+                                    <button class="am-fr like-btn am-vertical-align-middle">
+                                        <span class="am-icon-thumbs-o-up am-text-sm like-icon"></span>
                                         <span class="am-text-xs num"> 44</span>
                                     </button>
                                 </div>
@@ -103,8 +103,8 @@
                                         <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" class="am-circle am-margin-right-sm headImg" alt="头像">
                                         <span class="am-text-xs uname am-text-middle">朱自清</span>
                                     </a>
-                                    <button class="am-fr like am-vertical-align-middle">
-                                        <span class="am-icon-thumbs-o-up am-text-sm icon"></span>
+                                    <button class="am-fr like-btn am-vertical-align-middle">
+                                        <span class="am-icon-thumbs-o-up am-text-sm like-icon"></span>
                                         <span class="am-text-xs num"> 44</span>
                                     </button>
                                 </div>
