添加详情页文本UI

--- a/html/detail/detail.html
+++ b/html/detail/detail.html
@@ -67,7 +67,7 @@
         </header>
         <div class="content">
             <h2 class="am-text-xl">毕业一年，我学到的五种高效学习方法</h2>
-            <div class="author">
+            <div class="author am-margin-bottom">
                 <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
                 <div class="am-margin-left-xs">
                     <span class="name am-text-sm"><b>赵雷</b></span>
@@ -76,6 +76,11 @@
                         <span class="am-text-xs am-margin-left-xs">阅读100</span>
                     </div>
                 </div>
+            </div>
+            <div class="artical">
+                <p>一、精力管理</p>
+                <p>读大学时，我总是喜欢把日程表列得满满的。每天得看多少页书，做多少练习，花多少时间吃饭，甚至上厕所花多少时间，都列在小本本上。</p>
+                <p>看着密密麻麻的安排，心里会特别开心。看啦，我今天会完成这么多事情哦。</p>
             </div>
         </div>
         <div data-am-widget="gotop" class="am-gotop am-gotop-fixed">
