--- a/html/detail/detail.html
+++ b/html/detail/detail.html
@@ -72,15 +72,48 @@
                 <div class="am-margin-left-xs">
                     <span class="name am-text-sm"><b>赵雷</b></span>
                     <div>
-                        <span class="time am-text-xs">2017.2.5</span>
+                        <span class="time am-text-xs">2017年02月05日</span>
                         <span class="am-text-xs am-margin-left-xs">阅读100</span>
+                        <span class="am-text-xs am-margin-left-xs"><i class="am-icon-heart-o am-margin-right-xs"></i>90</span>
                     </div>
                 </div>
             </div>
-            <div class="artical">
+            <div class="artical am-margin-bottom">
                 <p>一、精力管理</p>
                 <p>读大学时，我总是喜欢把日程表列得满满的。每天得看多少页书，做多少练习，花多少时间吃饭，甚至上厕所花多少时间，都列在小本本上。</p>
                 <p>看着密密麻麻的安排，心里会特别开心。看啦，我今天会完成这么多事情哦。</p>
+                <p>相信很多人都有这样的经历，这样完成得并不好。即使拼命完成，完成质量也不高，不过为了心理安慰而已。</p>
+                <p>后来我才知道，比起这样机械性的时间管理，更重要的是精力管理。所有的安排都得有充沛的精力作保证，无精打采地干一天，不如精力充沛地干一小时。</p>
+            </div>
+            <div class="user-action">
+                <div class="like am-margin-bottom-sm">
+                    <i class="am-icon-heart-o"></i>
+                    <span>35</span>
+                </div>
+                <div class="comment">
+                    <button type="button" class="am-btn am-btn-primary am-radius">登录</button>
+                    <span class="am-margin-left-xs">后评论</span>
+                </div>
+            </div>
+        </div>
+        <div class="user-comments">
+            <div class="intro am-padding-vertical-xs am-padding-horizontal">
+                <span class="am-text-xs">评论</span>
+                <span class="am-text-xs">4</span>
+            </div>
+            <div class="author am-margin-bottom">
+                <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
+                <div class="am-margin-left-xs">
+                    <span class="name am-text-sm">赵雷</span>
+                    <div>
+                        <span class="time am-text-xs">1楼</span>
+                        <span class="am-text-xs am-margin-left-xs">02.05 09:23</span>
+                    </div>
+                </div>
+                <div class="am-fr">
+                    <i class="am-icon-comment-o am-icon-sm am-margin-right-xs"></i>
+                    <i class="am-icon-thumbs-o-up am-icon-sm"></i>
+                </div>
             </div>
         </div>
         <div data-am-widget="gotop" class="am-gotop am-gotop-fixed">
@@ -90,7 +123,6 @@
             </a>
         </div>
     </div>
-
     <!--[if (gte IE 9)|!(IE)]><!-->
     <script src="../../dep/jquery.min.js"></script>
     <!--<![endif]-->
