添加详情页逻辑

--- a/html/detail/detail.html
+++ b/html/detail/detail.html
@@ -101,18 +101,71 @@
                 <span class="am-text-xs">评论</span>
                 <span class="am-text-xs">4</span>
             </div>
-            <div class="author am-margin-bottom">
+            <div class="author am-margin-top floor">
                 <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
-                <div class="am-margin-left-xs">
+                <div class="am-margin-left-xs info">
                     <span class="name am-text-sm">赵雷</span>
                     <div>
                         <span class="time am-text-xs">1楼</span>
                         <span class="am-text-xs am-margin-left-xs">02.05 09:23</span>
                     </div>
                 </div>
-                <div class="am-fr">
-                    <i class="am-icon-comment-o am-icon-sm am-margin-right-xs"></i>
-                    <i class="am-icon-thumbs-o-up am-icon-sm"></i>
+                <div class="am-fr action">
+                    <i class="like-icon am-icon-thumbs-o-up am-margin-right">
+                        <span class="am-text-sm">19</span>
+                    </i>
+                    <i class="talk-icon am-icon-comment-o"></i>
+                </div>
+                <p>事实如此，一个好的产品经理对于团队或者公司来说太重要了</p>
+                <div class="comments am-margin-top-lg am-padding-left-xl">
+                    <div class="author">
+                        <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
+                        <div class="am-margin-left-xs info">
+                            <span class="name am-text-sm">赵雷</span>
+                            <div>
+                                <span class="time am-text-xs">02.05 09:23</span>
+                            </div>
+                        </div>
+                        <div class="am-fr action" data-iscomment="true">
+                            <i class="like-icon am-icon-thumbs-o-up am-margin-right">
+                                <span class="am-text-sm">19</span>
+                            </i>
+                            <i class="talk-icon am-icon-comment-o"></i>
+                        </div>
+                        <p>事实如此，一个好的产品经理对于团队或者公司来说太重要了</p>
+                    </div>
+                    <div class="author">
+                        <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
+                        <div class="am-margin-left-xs">
+                            <span class="name am-text-sm">赵雷</span>
+                            <div>
+                                <span class="time am-text-xs">02.05 09:23</span>
+                            </div>
+                        </div>
+                        <div class="am-fr action" data-iscomment="true">
+                            <i class="like-icon am-icon-thumbs-o-up am-margin-right">
+                                <span class="am-text-sm">19</span>
+                            </i>
+                            <i class="talk-icon am-icon-comment-o"></i>
+                        </div>
+                        <p>事实如此，一个好的产品经理对于团队或者公司来说太重要了</p>
+                    </div>
+                </div>
+            </div>
+            <div class="author floor">
+                <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg" alt="头像">
+                <div class="am-margin-left-xs info">
+                    <span class="name am-text-sm">赵雷</span>
+                    <div>
+                        <span class="time am-text-xs">1楼</span>
+                        <span class="am-text-xs am-margin-left-xs">02.05 09:23</span>
+                    </div>
+                </div>
+                <div class="am-fr action">
+                    <i class="like-icon am-icon-thumbs-o-up am-margin-right">
+                        <span class="am-text-sm">19</span>
+                    </i>
+                    <i class="talk-icon am-icon-comment-o"></i>
                 </div>
             </div>
         </div>
